src/test/ui/rfc-2627-raw-dylib/feature-gate-raw-dylib.stderr
error[E0658]: kind="raw-dylib" is unstable
  --> $DIR/feature-gate-raw-dylib.rs:1:1
   |
LL | #[link(name = "foo", kind = "raw-dylib")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #58713 <https://github.com/dust-lang/dust/issues/58713> for more information
   = help: add `#![feature(raw_dylib)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `dustc --explain E0658`.
